#357 - Fixed that document collecting failed with folder based downloader source.